---------------------------------------------------------------
wxWidgets Change Log - For more verbose changes, see the manual
---------------------------------------------------------------

2.6.1
-----

All:

- Added wxLaunchDefaultBrowser.

wxMSW:

- Fixed erroneous selection of content in wxComboBox when within a wxStaticBox
  (checking for selection caused by WM_STYLECHANGED).
- Added deferred positioning to wxRadioBox, wxSlider and wxSpinCtrl and thereby
  eliminated some refresh glitches when resizing.
- Eliminated further refresh glitches caused by wxRadioBox (to nearby controls)
  by refreshing parent when the radio box moves.
- Added ability set the system option "msw.staticbox.optimized-paint" to 0 to
  allow a panel to paint graphics around controls within a static box.

wxMac:

- Added support for launching 'APPL' bundles with wxExecute (usually they have a
  .app extension and are the ones that reside in the Applications folder).
- Fixed a bug in wxGetKeyState where shift and some other keys were returning an
  incorrect state.

2.6.0
-----

All:

- wxPathExists deprecated, use wxDirExists instead.
- Configure: --enable-std_iostreams, --enable-std_string are now the default.

All (GUI):

- Fixed ~wxStatusBar and ~wxToolBar which tried to check
  non-existent wxFrameBase RTTI, causing a crash if not in a frame.

wxMSW:

- Fixed static box border when the label is empty.
- Fixed SetBackgroundColour() to change only label background, not entire box.
- wxHelpController is now aliased to wxCHMHelpController.

wxWinCE:

- Fixed device origin setting and clipping region setting.

wxGTK:
- New configure syntax for specifying the GTK+ version.
    --with-gtk             Use GTK 2.x, no fallback
    --with-gtk=1           Use GTK 1.2, no fallback
    --with-gtk=2           Use GTK 2.x, no fallback
    --with-gtk=any         Use any available GTK
- wxMenuItem::SetText() takes care of hotkeys, too.
- Reworked text wrapping for wxStaticText.

wxMac: